# grumpytype

./: Cargo.toml
src/: dictionary.rs  error.rs  input.rs  main.rs  opt.rs  render.rs  state.rs  stats.rs  textgen.rs
src/render/: cursor.rs  mod.rs  spans.rs  text.rs
