[package]
name = "grumpytype"
version = "0.1.0"
authors = ["Quan Nguyen <quan.ngoc.nguyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = "0.8.4"
structopt = "0.3.25"
termion = "1.5.6"
thiserror = "1.0.30"
tui = "0.16.0"
